# digital_twin_project

./: .gitignore  README.md
FAST_LIO_LOCALIZATION/: CMakeLists.txt  package.xml
FAST_LIO_LOCALIZATION/config/: velodyne.yaml
FAST_LIO_LOCALIZATION/launch/: localization_velodyne.launch
FAST_LIO_LOCALIZATION/rviz_cfg/: localization.rviz
FAST_LIO_LOCALIZATION/scripts/: global_localization.py  publish_initial_pose.py  transform_fusion.py
FAST_LIO_LOCALIZATION/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
ai_inspector/: CMakeLists.txt  digital_twin.xml  package.xml
ai_inspector/scripts/: ai_monitor.py
ai_inspector/src/: ai_inspector_node.cpp  cloud_anomaly_detected.hpp  image_anomaly_detected.hpp  landmark_proximity.hpp  (+2 more)
ai_mailer/: CMakeLists.txt  package.xml
cloud_analyzer/: CMakeLists.txt  package.xml
digital_twin_annotator/: .gitignore  CMakeLists.txt
digital_twin_annotator/include/: atlas.hpp  camera.hpp  drawable.hpp  input_system.hpp  landmark.hpp  map_tile.hpp  map_tile_mesh.hpp  point2.hpp  quaternion.hpp  quaternion_impl.hpp  render_system.hpp  shader.hpp  world.hpp
digital_twin_annotator/src/: input_system.cpp  main.cpp  map_tile_mesh.cpp  render_system.cpp
digital_twin_annotator/src/shaders/: frame.fs  frame.vs  landmark.fs  landmark.vs  pointcloud.fs  pointcloud.vs  screen.fs  screen.vs
digital_twin_localization/: CMakeLists.txt  package.xml
image_analyzer/: CMakeLists.txt  package.xml
landmark_publisher/: CMakeLists.txt  package.xml
lidar_downsample/: CMakeLists.txt  package.xml
map_manager/: CMakeLists.txt  package.xml
(+9 files in other folders)
